crates/data-dict/tests/snapshots/validate_spec__s10_duplicate_column_name.snap
---
source: crates/data-dict/tests/validate_spec.rs
expression: "failing_diagnostic(\"spec/s10-duplicate-column-name.yaml\")"
---
Error: [S10] Column names must be unique within a table.
    ╭─[ spec/s10-duplicate-column-name.yaml:12:15 ]
    │
  7 │   table:
    │ 
 12 │       - name: id
    │               ─┬  
    │                ╰── appears more than once
────╯
